--- a/app/globals.css
+++ b/app/globals.css
@@ -37,15 +37,16 @@ body {
 }
 
 .todaysExersices {
-  font-size: 1.5rem;
+  margin-left: 2.5rem;
+  font-size: 1rem;
 }
 
 .CarouselHolder {
-  width: 300px;
+  width: 500px;
+  height: 200px;
 }
 
 .buttonsCarousel {
-  padding-left: -10px;
 }
 
 .TodayExerciseCard {
